[package]
name = "ssz-rs-derive"
version = "0.8.0"
authors = ["Alex Stokes <r.alex.stokes@gmail.com>"]
edition = "2018"
license = "MIT"
description = "utility crate for deriving simple serialize implementations"
repository = "https://github.com/ralexstokes/ssz-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
