[package]
name = "ssz-rs-test-gen"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_yaml = "0.9"
num-bigint = "0.4.3"
hex = "0.4.3"
convert_case = "0.6.0"
