[package]
name = "ssz-rs"
version = "0.8.0"
rust-version = "1.60"
authors = ["Alex Stokes <r.alex.stokes@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "../README.md"
description = "ethereum's simple serialize"
repository = "https://github.com/ralexstokes/ssz-rs"
exclude = [
    "scripts",
    "tests/data",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde", "std"]
std = [
    "bitvec/default",
    "sha2/default",
    "num-bigint/default",
]
serde = ["dep:serde", "dep:hex"]

[dependencies]
thiserror = "1.0.25"
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
ssz-rs-derive = { path = "../ssz-rs-derive"}
sha2 = { version ="0.9.8", default-features = false}
serde = { version = "1.0", features = ["derive"], optional = true }
hex = {version = "0.4.3", optional = true }
as-any = "0.3.0"
itertools = { version = "0.10.5", default-features = false }
num-bigint = { version ="0.4.3", default-features = false }

[dev-dependencies]
hex-literal = "0.3.3"
snap = "1.0"
project-root = "0.2.2"
serde_json = "1.0.81"

[build-dependencies]
sha2 = "0.9.8"
