[package]
name = "ssz"
version = "0.1.0"
authors = ["Alex Stokes <r.alex.stokes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.25"
bitvec = "0.22.3"
ssz_derive = { path = "../ssz_derive" }
sha2 = "0.9.8"

[dev-dependencies]
hex-literal = "0.3.3"
hex = "0.4.3"
