[tool.poetry]
name = "ssz-rs-test-gen"
version = "0.1.0"
description = ""
authors = ["Alex Stokes <r.alex.stokes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
